# cibs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
samples/: jfk.m4a
src/: asr.rs  audio.rs  backend_mlx.rs  backend_tch.rs  config.rs  decoder.rs  encoder.rs  error.rs  generate.rs  lib.rs  main.rs  mel.rs  qlinear.rs  tensor.rs  tokenizer.rs  translate.rs  weights.rs
tests/: e2e_test.rs  mel_test.rs  mlx_smoke.rs
tests/data/: gen_mel_reference.py  mel_ref_expected.f32  mel_ref_input.f32
